<resources>
    <string name="app_name">FavFoodCollection</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_food_app">Favorite Food App</string>
    <string name="add_new_item_button">Add New Item Button</string>
    <string name="save_button">Save Button</string>
    <string name="back_button">Back Button</string>
    <string name="item_image">Item Image</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="direction_to_cook">Direction To Cook</string>
    <string name="cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">Category</string>
</resources>