<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.addnewitem.AddNewItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:translationZ="100dp"
        android:gravity="end"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save_button"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginBottom="@dimen/_8sdp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionBtnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_clear"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionBtnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_check"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewNewItem"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/item_image"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher_round"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save_button"
                app:layout_constraintBottom_toBottomOf="@id/imageViewNewItem"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/ic_add_image"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageViewNewItem"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintTextColor="@color/primaryColor"
                    android:paddingHorizontal="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <EditText
                        android:id="@+id/editTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintTextColor="@color/primaryColor"
                    android:paddingHorizontal="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintTextColor="@color/primaryColor"
                    android:paddingHorizontal="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingredients"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintTextColor="@color/primaryColor"
                    android:paddingHorizontal="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="start"
                        android:inputType="textShortMessage"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cooking_time_in_minutes"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintTextColor="@color/primaryColor"
                    android:paddingHorizontal="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direction_to_cook"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_60sdp"
                    app:hintTextColor="@color/primaryColor"
                    android:paddingHorizontal="@dimen/_8sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>